# tsdb-anomaly-task

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: demo.txt
examples/: make_chart.py  make_demo_svg.py  quickstart.py
tests/: conftest.py  test_cli.py  test_client.py  test_deadman.py  test_doctests.py  test_duration.py  test_flux_generation.py  test_mad.py  test_models.py  test_rate_of_change.py  test_runner.py  test_seasonal.py  test_synthetic.py  test_task.py  test_threshold.py  test_tuning.py
tests/golden/: deadman.flux  mad.flux  rate_of_change.flux  threshold.flux  threshold_upper_only.flux
tsdb_anomaly_task/: __init__.py  __main__.py  cli.py  client.py  duration.py  flux.py  models.py  runner.py  synthetic.py  task.py  tuning.py
tsdb_anomaly_task/detectors/: __init__.py  base.py  deadman.py  mad.py  rate_of_change.py  seasonal.py  threshold.py
