[project]
name = "tsdb-anomaly-task"
version = "1.0.0"
description = "Declarative anomaly detection for InfluxDB: generate and deploy Flux tasks, or run the same detectors client-side."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "influxdb-client>=1.40",
]

[project.optional-dependencies]
charts = ["matplotlib>=3.8"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "matplotlib>=3.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "C4", "PIE"]
ignore = [
    "B008",    # function calls in argument defaults are used deliberately here
    "RUF001",  # unicode punctuation in prose docstrings is intentional
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# The package is meant to be run from a clone, not installed, so put the repo
# root on sys.path. Without this, a bare `pytest` cannot import the package
# (only `python -m pytest` would work, because that adds the CWD itself).
pythonpath = ["."]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
filterwarnings = ["error::DeprecationWarning"]

[tool.coverage.run]
source = ["tsdb_anomaly_task"]
omit = ["tsdb_anomaly_task/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
